<resources>
    <string name="app_name">Content Tools</string>

    <string name="email_hint">Введите эл. почту</string>
    <string name="name_hint">Введите имя группы</string>
    <string name="password_hint">Введите пароль</string>
    <string name="password_confirmed_hint">Введите пароль повторно</string>
    <string name="login">Войти</string>
    <string name="logged">Вход</string>
    <string name="register">Регистрация</string>
    <string name="ok">OK</string>
    <string name="create">СОЗДАТЬ</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="field_no_correct">Не все поля заполнены корректно!</string>
    <string name="register_user_device">Регистрация устройства!</string>
    <string name="register_successful">Регистрация устройства завершена успешно!</string>
    <string name="members">Учасников:</string>
    <string name="id">ИД:</string>
    <string name="news">Новостей:</string>
    <string name="empty_my_rooms">Нет добавленных групп.</string>
    <string name="empty_trips">Нет поездок.</string>
    <string name="title_dialog_auth_room">Подключение к %s</string>
    <string name="hint_password">Введите пароль</string>
    <string name="empty_field">Не все поля заполнены</string>
    <string name="create_group_successful">Группа создана успешно!</string>
    <string name="added">Добавлено!</string>
    <string name="search_hint">Введите имя или ид группы</string>
    <string name="departure">Отправление:</string>
    <string name="departure_hint">Откуда</string>
    <string name="time">Время:</string>
    <string name="date">Дата:</string>
    <string name="arrival">Прибытие:</string>
    <string name="arrival_hint">Куда</string>
    <string name="type_transportation">Типы перевозки:</string>
    <string name="type_cargo">Груз</string>
    <string name="type_docs">Документы</string>
    <string name="type_people">Люди</string>
    <string name="max_volume_weight_cargo">Макс. объём/вес груза:</string>
    <string name="max_people">Макс. кол-во чел:</string>
    <string name="wait_please">Подождите пожалуйста&#8230;</string>

    <color name="floating_btn">#ff464646</color>
</resources>
